main page - recipe page START button

--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
 
   <div id="start-page">
     <main>
-      <h1>Title of the game</h1>
+      <h1>Encarni's Kitchen</h1>
       <p>Instructions / Description</p>
       <button id="start">START</button>
     </main>
   </div>
+
+  <div id="start-page-recipe" class="hidden">
+    <main>
+      <h1>Recipe</h1>
+      <p>Ingredients/Quantity</p>
+      <button id="start-game">START</button>
+    </main>
+  </div>
+
+  
 
     <div id="lose-page">
     <main>
