--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css"/>
-  <title>Meatball</title>
+  <title>Encarni's Kitchen</title>
 </head>
 <body>
 
   <div id="start-page">
     <main>
       <h1>Encarni's Kitchen</h1>
-      <p>Instructions / Description</p>
+      <p>Wellcome to Encarni's Kitchen. Well, Encarni is sick and we have a drama here. 
+        Manolo, her husband, has to cook (and yes, he is an absolute mess). Encarni wants to cook a simple recipe, lets see if Manolo can handle it...
+      Click start to see the Encarni's Recipe.</p>
       <button id="start">START</button>
     </main>
   </div>
@@ -34,7 +36,8 @@
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
-
+  <script src="js/assets.js"></script>
+  <script src="js/player.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
