--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css"/>
   <title>Encarni's Kitchen</title>
 </head>
-<body>
+<body id="body">
 
   <div id="start-page">
     <main>
