--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +14,8 @@
 
   <div id="start-page">
     <main>
-      <h1>Encarni's Kitchen</h1>
-      <p>Wellcome to Encarni's Kitchen. Well, Encarni is sick and we have a drama here. 
+      
+      <p id="instructions">Wellcome to Encarni's Kitchen. Well, Encarni is sick and we have a drama here. 
         Manolo, her husband, has to cook (and yes, he is an absolute mess). Encarni wants to cook a simple recipe, lets see if Manolo can handle it...
       Click start to see the Encarni's Recipe.</p>
       <button id="start">START</button>
@@ -37,8 +40,8 @@
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
   <script src="js/assets.js"></script>
-  <script src="js/player.js"></script>
   <script src="js/ingredients.js"></script>
+  <script src="js/player.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
