--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       
       <p id="instructions">Wellcome to Encarni's Kitchen. Well, Encarni is sick and we have a drama here. 
         Manolo, her husband, has to cook (and yes, he is an absolute mess). Encarni wants to cook a simple recipe, lets see if Manolo can handle it...
-      Click start to see the Encarni's Recipe.</p>
+      </p>
       <button id="start">START</button>
     </main>
   </div>
 
-  <div id="start-page-recipe" class="hidden">
+  <div id="start-page-recipe" class="hidden" style="display: none;">
     <main>
       <h1>Recipe</h1>
-      <p>Ingredients/Quantity</p>
-      <button id="start-game">START</button>
+      <p id="recipeInst">Ingredients/Quantity</p>
+      <button id="start-game" class="start-game-button">START</button>
     </main>
   </div>
 
