--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id="lose-page">
     <main>
-      <h1>YOU LOSE SUCKER</h1>
+      <h1 id ='loser'>YOU LOSE SUCKER</h1>
     </main>
   </div>
 
