--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Encarni's Kitchen</title>
 </head>
 <body id="body">
-
+  
   <div id="start-page">
     <main>
       
@@ -51,10 +51,16 @@
   
 
     <div id="lose-page">
+      <img src="./img/sadGrandma.png"/>
     <main>
-      <h1 id ='loser'>YOU LOSE SUCKER</h1>
+      <h1 id ='loser'>YOU LOSE ¡¡INúTIL!!</h1>
       <button id="try-again" class="start-game-button">TRY AGAIN</button>
     </main>
+  </div>
+
+  <div id="win-page">
+    <img src="./img/happyGrandBW.png"/>
+    <h1 id ='winer'>WELL DONE!!! YOU CAN COOK, MANOLITO</h1>
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
