--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   <title>Encarni's Kitchen</title>
 </head>
 <body id="body">
-  
-  <div id="start-page">
+   <div id="start-page">
     <main>
       
       <p id="instructions">Wellcome to Encarni's Kitchen. Well, Encarni is sick and we have a drama here. 
-        Manolo, her husband, has to cook (and yes, he is an absolute mess). Encarni wants to cook a simple recipe, lets see if Manolo can handle it...
+        Manolo, her husband, has to cook (and yes, he is an absolute mess). Encarni wants to cook a simple recipe, lets see if Manolo can make it...
       </p>
       <button id="start">START</button>
     </main>
